k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unetify-backend
  namespace: apps-prod
spec:
  selector:
    app: unetify-backend
  ports:
    - port: 80
      targetPort: 8000
