k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unetify-backend
  namespace: apps-prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: api.unetify.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unetify-backend
                port:
                  number: 80
